fix swal z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,3 @@
 .swal2-container {
-    z-index: 10000 i !important;
+    z-index: 10000 !important;
 }
